# kaido

./: .env  .eslintignore  .prettierignore  LICENSE  README.md  bun.lockb  index.html  package.json  svelte.config.js  vite.config.ts
migrations/2024-02-25-161335_create_list/: down.sql  up.sql
migrations/2024-02-25-161735_create_task/: up.sql
migrations/2024-02-25-162736_create_annotation/: down.sql  up.sql
migrations/2024-02-25-163023_create_subtask/: down.sql  up.sql
src/: App.jsx  App.svelte  index.jsx  routes.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: list_commands.rs  mod.rs  task_commands.rs
src-tauri/src/models/: list.rs  mod.rs  new_task.rs  task.rs
src-tauri/src/services/: list_service.rs  mod.rs  task_service.rs
src/Sidebar/: SidebarContainer.jsx  SidebarContainer.scss
src/Sidebar/ProjectList/: NewListButton.jsx  ProjectList.jsx  ProjectListItem.jsx
src/TaskList/: NewTaskField.jsx  NewTaskField.tsx  Task.tsx  TaskList.jsx  TaskList.tsx
src/components/: NewTask.svelte
src/contexts/: TaskListContext.tsx
src/icons/: InboxIcon.jsx
src/lib/: DbManager.ts  IStorageDriver.ts  StorageDriver.ts
src/lib/components/: NewTaskInput.svelte  Sidebar.svelte  Task.svelte  TaskList.svelte
src/lib/models/: List.ts  Task.ts
src/routes/: +page.svelte
src/types/: Task.ts
