[package]
name = "kaido"
version = "0.0.0"
description = "A simple local to-do list application"
authors = ["alxwnth"]
edition = "2021"

[lib]
name = "kaido_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
libsqlite3-sys = {version = ">=0.17.2, <0.28.0", features = ["bundled"] }
chrono = {version = "0.4.34", features = ["serde"] }
